2005-06-06 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* device/include/mcs51/reg764.h: Changed PB0 to PBO as requested by
	  Marcel Telka in bug #1215704

2005-06-02 Slade Rich <slade_rich AT users.sourceforge.net>

	* src/pic/pcode.c : Changed pseudo stack size to 15 to allow WSAVE to be located in shared memory bank.

2005-05-31 Raphael Neider <rneider AT web.de>

	* src/pic16/{gen.c,genarith.c}: replaced sign-extension
	  "CLRF, BTFSC <signbit>, DECF/COMF" with side-effect-free
	  "CLRF, BTFSC <signbit>, SETF"; fixes "long>>9"

2005-05-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_strncpy.c: fixed the fix

2005-05-26 Raphael Neider <rneider AT web.de>

	* src/pic16/glue.c (pic16_printIvalChar): fixed _constant_ string
	  initializers with \0, bug #1208187
	* src/pic/glue.c (printIvalChar): fixed (non- and constant) string
	  intializers with \0, bug #1208187

2005-05-26 Raphael Neider <rneider AT web.de>

	* src/pic16/glue.c (pic16_printIvalChar): fixed string
	  initializers with \0, bug #1208187
	* src/pic16/main.c (_process_pragma): added sanity checks
	  for stack position and size, emit warnings when appropriate

2005-05-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_strncpy.c: fixed not filling with \0

2005-05-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (funcOfType, funcOfTypeVarg, stringToSymbol,
	  createFunction),
	* src/SDCC.y (external_definition, enumerator, parameter_declaration,
	  compound_statement),
	* src/SDCCsymt.h,
	* src/SDCCsymt.c (addSymChain, processFuncArgs): fixed bug #1159134

2005-05-24 Raphael Neider <rneider AT web.de>

	* src/pic16/glue.c (pic16_printGPointerType): fixed #1207796

2005-05-24 Raphael Neider <rneider AT web.de>

	* device/include/pic16/pic18f{442,452,458}.h: fixed wrong
	  TRISE definitions, closes bug #1162453

2005-05-22 Raphael Neider <rneider AT web.de>

	* src/pic16/main.c (_process_pragma): check for missing